# TinyWebServer

./: CMakeLists.txt
error/: CMakeLists.txt  m_error.cpp  m_error.h
htdocs/: index.html
http/: CMakeLists.txt  httpConn.cpp  httpConn.h
ringbuffer/: CMakeLists.txt  ringbuffer.cpp  ringbuffer.h
src/: CMakeLists.txt  main.cpp
